--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,14 @@
 
-<div class="jumbotron">
-	<h1>Welcome to my app</h1>
-	<p>Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>.</p>
+<div class="jumbotron center">
+	<h1>Welcome to Sonja's Adventures!</h1>
+	
+	<% if user_signed_in? %>
+	 Adventure time
+	 <% else %>
+		<p>
+			<%= link_to "Frequent Flyer", new_user_session_path, class: "btn btn-default btn-lg" %>
+			<%= link_to "Climb Aboard!", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+		</p>
+	<% end %>
+
 </div>
