added jQuery masonry

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,6 +1,16 @@
-$body-bg:  #2ecc71;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+
+$body-bg:  #ecf0f1;
 $navbar-inverse-bg:  #27ae60; 
 $navbar-inverse-link-color: white;
 
 @import 'bootstrap'; 
 
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
