--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-	<nav class="navbar navbar-default">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -17,6 +17,7 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path%></li>
       <% if user_signed_in? %>
+        <li><%= link_to 'New Pin', new_pin_path %></li>
         <li><%= link_to "Account Settings", edit_user_registration_path %></li>
         <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
       <% else %>
